--- a/app/src/main/res/layout/fragment_calories.xml
+++ b/app/src/main/res/layout/fragment_calories.xml
@@ -19,45 +19,7 @@
         android:fitsSystemWindows="true"
         android:theme="@style/Theme.Forrest.Welcome">
 
-        <com.google.android.material.appbar.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="128dp"
-            app:elevation="0dp"
-            app:expanded="true">
-
-            <com.google.android.material.appbar.CollapsingToolbarLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingBottom="16dp"
-                app:expandedTitleMarginBottom="28dp"
-                app:expandedTitleMarginStart="48dp"
-                app:expandedTitleTextAppearance="@style/WelcomeToolBar"
-                app:maxLines="2">
-
-                <com.google.android.material.appbar.MaterialToolbar
-                    android:id="@+id/toolbar"
-                    style="@style/Widget.MaterialComponents.Toolbar.Primary"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:elevation="0dp"
-                    app:subtitle="@string/welcome_subtitle"
-                    app:subtitleTextAppearance="@style/TextAppearance.AppCompat.Title"
-                    app:title="@string/welcome_title"
-                    app:titleTextColor="?attr/colorOnBackground"
-                    tools:title="Welcome Ramiro" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:layout_marginStart="48dp"
-                    android:fontFamily="@font/roboto_medium"
-                    android:text="Set up your account"
-                    android:textColor="?attr/colorOnBackground"
-                    android:textSize="24sp" />
-            </com.google.android.material.appbar.CollapsingToolbarLayout>
-        </com.google.android.material.appbar.AppBarLayout>
-
+        <include android:id="@+id/action_bar" layout="@layout/welcome_action_bar" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraint_container"
