--- a/app/src/main/res/layout/fragment_goal.xml
+++ b/app/src/main/res/layout/fragment_goal.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="viewmodel"
+            type="com.example.android.forrest.ui.welcome.goal.GoalViewModel" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -14,21 +16,7 @@
         android:fitsSystemWindows="true"
         android:theme="@style/Theme.Forrest.Welcome">
 
-        <com.google.android.material.appbar.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:elevation="0dp">
-
-            <com.google.android.material.appbar.MaterialToolbar
-                android:id="@+id/toolbar"
-                style="@style/Widget.MaterialComponents.Toolbar.Primary"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:title="@string/welcome_title"
-                app:titleTextColor="?attr/colorOnBackground"
-                tools:title="Welcome Ramiro \nSet up your account" />
-        </com.google.android.material.appbar.AppBarLayout>
-
+        <include android:id="@+id/action_bar" layout="@layout/welcome_action_bar" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraint_container"
@@ -39,14 +27,13 @@
                 android:id="@+id/info_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Setup your goal"
+                android:text="@string/goal_info"
                 android:textColor="?attr/colorOnBackground"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.15" />
-
+                app:layout_constraintVertical_bias="0.25" />
 
             <Button
                 android:id="@+id/frequency_dropdown"
@@ -70,13 +57,25 @@
                 app:layout_constraintStart_toStartOf="@+id/frequency_dropdown"
                 app:layout_constraintTop_toBottomOf="@+id/frequency_dropdown" />
 
-            <Button
+            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                 android:id="@+id/next_button"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="56dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
-                android:text="Next"
+                android:backgroundTint="?attr/colorSecondary"
+                android:clickable="true"
+                android:focusable="true"
+                android:gravity="center_vertical|end"
+                android:paddingStart="34dp"
+                android:paddingEnd="16dp"
+                android:text="@string/next"
+                android:textColor="@color/black"
+                android:onClick="@{() -> viewmodel.navigateToHomeScreen()}"
+                app:icon="@drawable/ic_arrow_next"
+                app:iconGravity="end"
+                app:iconSize="16dp"
+                app:iconTint="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
