--- a/app/src/main/res/layout/fragment_goal.xml
+++ b/app/src/main/res/layout/fragment_goal.xml
@@ -36,7 +36,7 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.28" />
+                app:layout_constraintVertical_bias="0.24" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/frequency_container"
@@ -145,6 +145,7 @@
                 android:textColor="?attr/colorSecondary"
                 app:chipBackgroundColor="?attr/colorPrimary"
                 app:chipIcon="@drawable/ic_add"
+                app:iconEndPadding="-6dp"
                 app:chipIconTint="?attr/colorSecondary"
                 app:chipStrokeColor="?attr/colorSecondary"
                 app:chipStrokeWidth="1dp"
@@ -156,7 +157,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="12dp"
                 android:textColor="?attr/colorOnBackground"
                 android:visibility="gone"
                 app:layout_constraintBottom_toTopOf="@+id/meal_equivalent_text"
@@ -174,25 +175,40 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:textColor="?attr/colorOnBackground"
+                android:lineSpacingMultiplier="1.2"
+                android:textAlignment="center"
                 android:visibility="gone"
+                android:maxWidth="240dp"
                 app:layout_constraintBottom_toTopOf="@+id/meal_equivalent_image"
                 app:layout_constraintEnd_toEndOf="@+id/calories_burning_text"
                 app:layout_constraintStart_toStartOf="@+id/calories_burning_text"
                 app:layout_constraintTop_toBottomOf="@+id/calories_burning_text"
-                tools:text="The equivalent to 1 pizza"
+                tools:text="The equivalent to pizza"
                 tools:visibility="visible" />
+
+            <ProgressBar
+                android:id="@+id/loading_indicator"
+                android:layout_marginTop="16dp"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:visibility="invisible"
+                app:layout_constraintTop_toBottomOf="@id/calories_burning_text"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
             <ImageView
                 android:id="@+id/meal_equivalent_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginBottom="24dp"
                 android:contentDescription="@string/calories_meal_equivalent_img"
-                android:src="@drawable/ic_launcher_foreground"
+                android:scaleType="centerCrop"
                 android:visibility="gone"
                 app:layout_constraintBottom_toTopOf="@+id/next_button"
                 app:layout_constraintEnd_toEndOf="@+id/meal_equivalent_text"
                 app:layout_constraintStart_toStartOf="@+id/meal_equivalent_text"
                 app:layout_constraintTop_toBottomOf="@+id/meal_equivalent_text"
+                tools:src="@drawable/ic_launcher_foreground"
                 tools:visibility="visible" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
