--- a/app/src/main/res/layout/fragment_countdown.xml
+++ b/app/src/main/res/layout/fragment_countdown.xml
@@ -1,17 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.countdown.CountdownFragment">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="64sp"
-        android:textStyle="bold"
-        android:layout_gravity="center"
-        android:textColor="@color/indigo"
-        android:text="5" />
+    <data>
+        <variable
+            name="viewmodel"
+            type="com.example.android.forrest.ui.countdown.CountdownViewModel" />
+    </data>
 
-</FrameLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".ui.countdown.CountdownFragment">
+
+        <TextView
+            android:id="@+id/countdown_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="64sp"
+            android:textStyle="bold"
+            android:layout_gravity="center"
+            android:textColor="@color/indigo"
+            tools:text="5" />
+    </FrameLayout>
+</layout>
